--- a/app/src/main/res/layout/activity_configuracion_de_cuenta.xml
+++ b/app/src/main/res/layout/activity_configuracion_de_cuenta.xml
@@ -7,21 +7,171 @@
     android:background="#FFCDD2"
     tools:context=".configuracionDeCuenta">
 
-    <Button
-        android:id="@+id/btnCerrarSesion"
-        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
+    <EditText
+        android:id="@+id/txtNombreConfigurarCuenta"
         android:layout_width="269dp"
-        android:layout_height="54dp"
-        android:background="#EDEAEA"
-        android:backgroundTint="#F4F4F4"
-        android:backgroundTintMode="add"
-        android:text="@string/btn_cerrar_sesion_configuracion_de_cuenta"
-        android:textSize="24sp"
+        android:layout_height="49dp"
+        android:ems="10"
+        android:hint="@string/nombre_crear_cuenta"
+        android:inputType="textPersonName"
+        android:textColor="#646464"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.849" />
+        app:layout_constraintVertical_bias="0.221" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/nombre_crear_cuenta"
+        android:textColor="#646464"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.194"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.185" />
+
+    <EditText
+        android:id="@+id/txtCorreoConfigurarCuenta"
+        android:layout_width="269dp"
+        android:layout_height="49dp"
+        android:ems="10"
+        android:hint="@string/correo_electronico_crear_cuenta"
+        android:inputType="textEmailAddress"
+        android:textColor="#646464"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.571" />
+
+    <EditText
+        android:id="@+id/txtContrasenaConfigurarCuenta"
+        android:layout_width="269dp"
+        android:layout_height="49dp"
+        android:ems="10"
+        android:hint="@string/contrasena_crear_cuenta"
+        android:inputType="textPassword"
+        android:textColor="#646464"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.671" />
+
+    <EditText
+        android:id="@+id/txtRepetirContrasenaConfigurarCuenta"
+        android:layout_width="269dp"
+        android:layout_height="49dp"
+        android:ems="10"
+        android:hint="@string/repetir_contrasena_crear_cuenta"
+        android:inputType="textPassword"
+        android:textColor="#646464"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.785" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/contrasena_crear_cuenta"
+        android:textColor="#646464"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.206"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.616" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/apellido_crear_cuenta"
+        android:textColor="#646464"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.188"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.303" />
+
+    <EditText
+        android:id="@+id/txtApellidoConfigurarCuenta"
+        android:layout_width="269dp"
+        android:layout_height="49dp"
+        android:ems="10"
+        android:hint="@string/apellido_crear_cuenta"
+        android:inputType="textPersonName"
+        android:textColor="#646464"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.344" />
+
+    <EditText
+        android:id="@+id/txtTelefonoConfigurarCuenta"
+        android:layout_width="269dp"
+        android:layout_height="49dp"
+        android:ems="10"
+        android:hint="@string/telefono_crear_cuenta"
+        android:inputType="phone"
+        android:textColor="#646464"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.46" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/correo_electronico_crear_cuenta"
+        android:textColor="#646464"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.237"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.519" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/telefono_crear_cuenta"
+        android:textColor="#646464"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.196"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.414" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/repetir_contrasena_crear_cuenta"
+        android:textColor="#646464"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.245"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.724" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -29,128 +179,45 @@
         android:layout_height="128dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.061"
-        tools:srcCompat="@drawable/whatsapp_image_2022_04_23_at_6_39_43_pm" />
-
-    <EditText
-        android:id="@+id/idNombreCompletoCrearCuenta2"
-        android:layout_width="269dp"
-        android:layout_height="49dp"
-        android:ems="10"
-        android:hint="@string/nombre_crear_cuenta"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.288" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/correo_electronico_crear_cuenta"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.244"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.369" />
-
-    <EditText
-        android:id="@+id/editTextTextPassword3"
-        android:layout_width="269dp"
-        android:layout_height="49dp"
-        android:ems="10"
-        android:hint="@string/contrasena_crear_cuenta"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.536" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/nombre_crear_cuenta"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.241"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.248" />
-
-    <EditText
-        android:id="@+id/editTextTextPassword4"
-        android:layout_width="269dp"
-        android:layout_height="49dp"
-        android:ems="10"
-        android:hint="@string/repetir_contrasena_crear_cuenta"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.658" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/repetir_contrasena_crear_cuenta"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.242"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.603" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/contrasena_crear_cuenta"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.209"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.487" />
-
-    <EditText
-        android:id="@+id/editTextTextEmailAddress2"
-        android:layout_width="269dp"
-        android:layout_height="49dp"
-        android:ems="10"
-        android:hint="@string/correo_electronico_crear_cuenta"
-        android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.414" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:srcCompat="@drawable/whatsapp_image_2022_04_23_at_6_39_43_pm_removebg_preview" />
 
     <Button
         android:id="@+id/btnGuardarConfiguracion"
         style="@style/Widget.Material3.Button.ElevatedButton.Icon"
-        android:layout_width="269dp"
-        android:layout_height="54dp"
+        android:layout_width="265dp"
+        android:layout_height="38dp"
         android:background="#EDEAEA"
         android:backgroundTint="#EDEAEA"
         android:backgroundTintMode="add"
         android:text="@string/btn_guardar_datos_configuracion_de_cuenta"
-        android:textSize="24sp"
+        android:textColor="#646464"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.757" />
+        app:layout_constraintVertical_bias="0.857" />
+
+    <Button
+        android:id="@+id/btnVolverAInicio"
+        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
+        android:layout_width="265dp"
+        android:layout_height="38dp"
+        android:background="#EDEAEA"
+        android:backgroundTint="#EDEAEA"
+        android:backgroundTintMode="add"
+        android:text="@string/btn_volver_a_inicio_configuracion_de_cuenta"
+        android:textColor="#646464"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.923" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
